welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
			droite
                        ^SnakeBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
			gauche
                        ^SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
		} else if(getDirection == Direction.OUEST) {
                       ^